# git-tar

./: .gitignore  .mcp.json  .mise.toml  CLAUDE.md  README.md  pyproject.toml  start.sh  stop.sh
src/git_tar/: __init__.py  main.py
tests/: __init__.py  test_main.py
